--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <link rel="stylesheet" href="styles.css" />
     <title>User Registration</title>
   </head>
-  <body></body>
+  <body>
+    <form id="registration-form">
+      <label for="username">Username:</label>
+      <input type="text" id="username" required />
+    </form>
+  </body>
 </html>
