--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <form id="registration-form">
       <label for="username">Username:</label>
       <input type="text" id="username" required />
+      <label for="email">Email:</label>
+      <input type="text" id="email" required />
     </form>
   </body>
 </html>
