feat: add password input field to registration form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <label for="username">Username:</label>
       <input type="text" id="username" required />
       <label for="email">Email:</label>
-      <input type="text" id="email" required />
+      <input type="email" id="email" required />
+      <label for="password">Password:</label>
+      <input type="password" id="password" required />
     </form>
   </body>
 </html>
