--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <input type="email" id="email" required />
       <label for="password">Password:</label>
       <input type="password" id="password" required />
+
+      <button type="submit">Register</button>
+      <div id="form-feedback"></div>
     </form>
+    <script src="script.js"></script>
   </body>
 </html>
