feat: wrap script in a DOMContentLoaded event listener

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <button type="submit">Register</button>
       <div id="form-feedback"></div>
     </form>
-    <script src="script.js"></script>
+    <DOMContentLoaded>
+      <script src="script.js"></script>
+    </DOMContentLoaded>
   </body>
 </html>
