feat: add content container with loading placeholder and link JavaScript file for API data fetching

--- a/fetch-data.html
+++ b/fetch-data.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="fetch-data.css" />
     <title>User Data Display</title>
   </head>
-  <body></body>
+  <body>
+    <div id="content">
+      <h1>User List</h1>
+      <div id="api-data">Loading user data...</div>
+    </div>
+    <script src="fetch-data.js"></script>
+  </body>
 </html>
